Revert "style: increase z-index for active-chats-container to avoid potential overlapping"
This reverts commit 2ffffd2c0fe580be5a70bcd1ad378bbbc713669a.

--- a/src/screens/HomeScreen.module.css
+++ b/src/screens/HomeScreen.module.css
@@ -17,7 +17,6 @@
   overflow: visible;
   justify-content: right;
   pointer-events: visible;
-  z-index: 5;
 }
 
 .active-chats-bottom {
@@ -38,14 +37,7 @@
 }
 
 .chat-heads-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   animation: fadeIn 150ms ease-in backwards;
-  max-height: 80vh;
-  overflow: auto;
-  backdrop-filter: blur(10px);
-  border-radius: 10px;
 }
 
 @keyframes fadeIn {
